# ps16-etsi-pki

./: .env  .gitmodules  README.md  build.gradle  docker-compose.yml  settings.gradle  setup.sh
aa-ca/: Dockerfile  README.md  build.gradle  settings.gradle
aa-ca/src/main/java/eu/fbk/aleph/its/aaca/api/: AuthorizationAuthorityCert.java  AuthorizationTicket.java  GroupInteraction.java  GroupMembership.java
aa-ca/src/main/java/eu/fbk/aleph/its/aaca/config/: AaConfig.java  Setup.java
benchmark-results/: chart.py
c2c-common-groupsig/: README.adoc  build.gradle
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/common/crypto/: Algorithm.java  DefaultCryptoManager.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/common/validator/: CRLValidator.java  CTLValidator.java  CertificateValidator.java  InvalidCertificateException.java  PermissionValidator.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/etsits102941/v131/: MessageProcessingException.java  SignatureVerificationException.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/groupsig/: Bls12381PS16Signature.java  GroupJoinInteraction.java  GroupSignedData.java  Ps16GroupPublicKey.java  Ps16MemberSecretKey.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/groupsig/authorization/: InnerGroupRequest.java  InnerInteraction.java  InnerInteractionRequest.java  InnerInteractionResponse.java  SharedGroupRequest.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/groupsig/authorizationvalidation/: GroupAuthorizationValidationRequest.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/groupsig/cert/: AACert.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/ieee1609dot2/crypto/: Ieee1609Dot2CryptoManager.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/ieee1609dot2/generator/: BaseAuthorityCertGenerator.java  SecuredDataGenerator.java
c2c-common-groupsig/src/main/java/org/certificateservices/custom/c2x/ieee1609dot2/validator/: BaseCertificateValidator.java  CountryOnlyRegionValidator.java
ea-ca/: Dockerfile  README.md  build.gradle
ea-ca/src/main/java/eu/fbk/its/ca/ea/api/: AuthorizationValidation.java  EaCertificate.java  EnrollmentCertificate.java  EnrollmentVerification.java  Resource.java
ea-ca/src/main/java/eu/fbk/its/ca/ea/config/: EaConfig.java  Setup.java
ea-ca/src/main/java/eu/fbk/its/ca/ea/services/: GenEnrollmentCertificate.java  GenEnrollmentVerification.java  RequestAaCertificate.java
ea-ca/src/main/java/eu/fbk/its/ca/ea/utils/: Com.java
its-station/: Dockerfile  Dockerfile.back  build.gradle
its-station/src/main/java/eu/fbk/aleph/its/: Main.java
its-station/src/main/java/eu/fbk/aleph/its/benchmark/etsi103097/: DenmGeneratorBenchmark.java  DenmReceiverBenchmark.java
its-station/src/main/java/eu/fbk/aleph/its/benchmark/groupsig/: DenmGeneratorBenchmark.java  DenmReceiverBenchmark.java
its-station/src/main/java/eu/fbk/aleph/its/config/: Setup.java
its-station/src/main/java/eu/fbk/aleph/its/domain/authorization/: AuthorizationCredentials.java  GroupJoin.java  RequestAaCertificate.java
its-station/src/main/java/eu/fbk/aleph/its/domain/enrollment/: EnrollmentCredentials.java  RequestEaCertificate.java
its-station/src/main/java/eu/fbk/aleph/its/domain/root/: RequestRaCertificate.java
its-station/src/main/java/eu/fbk/aleph/its/network/: Broadcast.java  Listener.java
its-station/src/main/java/eu/fbk/aleph/its/utils/constant/: ConfigConstants.java
libgroupsig_bench/: CMakeLists.txt  DENM.txt  Dockerfile  README.md  run_benchmarks.sh
libgroupsig_bench/scripts/: benchmark-results.json  make_full_json.py  per-iter.json  plot_signature_lengths.py  plotting_horizontal_grouped.py
libgroupsig_bench/src/: main.c  measure_signatures.c
libgroupsig_bench/src/benchmark/: bbs04.cpp  dl21_seq.cpp  driver.cpp  gl19.cpp  klap20.cpp  ps16.cpp
libgroupsig_bench/src/include/: bbs04_bench.h  dl21_seq_bench.h  gl19_bench.h  input_message.h  klap20_bench.h  ps16_bench.h
libgroupsig_bench/src/snippets/: bbs04_bench.c  dl21_seq_bench.c  gl19_bench.c  input_message.c  klap20_bench.c  ps16_bench.c
root-ca/: Dockerfile  README.md  build.gradle
root-ca/src/main/java/eu/fbk/aleph/its/rootca/api/: RootCert.java  (+1 more)
(+40 files in other folders)
